bootstrappers/aws/_servers.tf
resource "aws_instance" "web" {
  ami = "ami-0e55e373"
  instance_type = "t1.micro"
  tags {
    Name = "eralabs"
  }
}
