bootstrappers/aws/rdb.tf
resource "aws_db_instance" "default" {
  allocated_storage    = 20
  max_allocated_storage = 50
  storage_type         = "gp2"
  engine               = "mysql"
  engine_version       = "5.7"
  instance_class       = "db.t2.micro"
  name                 = "mydb"
  username             = "foo"
  password             = "foobarbaz"
  parameter_group_name = "default.mysql5.7"
}
